Fixing deploy hooks. Target was missing.

--- a/.cloud66/deploy_hooks.yml
+++ b/.cloud66/deploy_hooks.yml
@@ -2,3 +2,4 @@ production:
   before_rails:
     - source: /.cloud66/files/diaspora.yml
       destination: <%= ENV['RAILS_STACK_PATH'] %>/config/diaspora.yml
+      target: rails
